Added user aanmaken + boekingen fixes ivm dropdowns en id's

--- a/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
@@ -65,6 +65,8 @@
                 }
 
             </table>
+
+            @Html.ActionLink("Create New Boeking", "Create")
         </div>
     </div>
     <div id="footerwrap">
