--- a/HotelService/HotelService/Views/Home/Index.cshtml
+++ b/HotelService/HotelService/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <p>
                 Bekijk ons aanbod
             <br />
-                Maak een account
+                @Html.ActionLink("Maak een nieuw account", "Create", "Gebruiker")
             </p>
         </div>
     </div>
