--- a/HotelService/HotelService/Views/Klant/Created.cshtml
+++ b/HotelService/HotelService/Views/Klant/Created.cshtml
@@ -23,7 +23,7 @@
     <div id="contentwrap">
         <div id="content">
             <h2>@ViewBag.Title</h2>
-            <p>U heeft een nieuwe gebruiker toegevoegd!</p>
+            <p>U heeft een nieuwe gebruiker toegevoegd en uw gegevens zijn verzonden naar het door u opgegeven e-mailadres.</p>
         </div>
     </div>
     <div id="footerwrap">
