--- a/HotelService/HotelService/Views/Home/Index.cshtml
+++ b/HotelService/HotelService/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             }
             <h2>OF:</h2>
             <p>
-                Bekijk ons aanbod
+                @Html.ActionLink("Bekijk ons aanbod", "KlantKamerOverzicht", "Kamer")
             <br />
                 @Html.ActionLink("Maak een nieuw account", "Create", "Klant")
             </p>
